# top-down-game

./: CMakeLists.txt
include/: constants.hpp  game-manager.hpp  vector2-ext.hpp
include/entities/: colliding-result.hpp  entity.hpp  player.hpp  temp.hpp
include/objects/: customizable-object.hpp  object.hpp  temp.hpp
src/: game-manager.cpp  main.cpp  vector2-ext.cpp
src/entities/: entity.cpp  player.cpp  temp.cpp
src/objects/: customizable-object.cpp  object.cpp  temp.cpp
